--- a/NAMESPACE
+++ b/NAMESPACE
@@ -270,6 +270,10 @@ S3method(predictLearner,FilterWrapper)
 S3method(predictLearner,ModelMultiplexer)
 S3method(predictLearner,MulticlassWrapper)
 S3method(predictLearner,MultilabelBinaryRelevanceWrapper)
+S3method(predictLearner,MultilabelClassifierChainsWrapper)
+S3method(predictLearner,MultilabelDBRWrapper)
+S3method(predictLearner,MultilabelNestedStackingWrapper)
+S3method(predictLearner,MultilabelStackingWrapper)
 S3method(predictLearner,PreprocWrapper)
 S3method(predictLearner,StackedLearner)
 S3method(predictLearner,TuneWrapper)
@@ -503,6 +507,10 @@ S3method(trainLearner,FilterWrapper)
 S3method(trainLearner,ModelMultiplexer)
 S3method(trainLearner,MulticlassWrapper)
 S3method(trainLearner,MultilabelBinaryRelevanceWrapper)
+S3method(trainLearner,MultilabelClassifierChainsWrapper)
+S3method(trainLearner,MultilabelDBRWrapper)
+S3method(trainLearner,MultilabelNestedStackingWrapper)
+S3method(trainLearner,MultilabelStackingWrapper)
 S3method(trainLearner,OverBaggingWrapper)
 S3method(trainLearner,OversampleWrapper)
 S3method(trainLearner,PreprocWrapper)
@@ -777,7 +785,6 @@ export(getTaskType)
 export(getTuneResult)
 export(gmean)
 export(gpr)
-export(hamloss)
 export(hasLearnerProperties)
 export(hasProperties)
 export(holdout)
@@ -828,6 +835,10 @@ export(makeModelMultiplexer)
 export(makeModelMultiplexerParamSet)
 export(makeMulticlassWrapper)
 export(makeMultilabelBinaryRelevanceWrapper)
+export(makeMultilabelClassifierChainsWrapper)
+export(makeMultilabelDBRWrapper)
+export(makeMultilabelNestedStackingWrapper)
+export(makeMultilabelStackingWrapper)
 export(makeMultilabelTask)
 export(makeOverBaggingWrapper)
 export(makeOversampleWrapper)
@@ -875,7 +886,6 @@ export(measureFP)
 export(measureFPR)
 export(measureGMEAN)
 export(measureGPR)
-export(measureHAMLOSS)
 export(measureLogloss)
 export(measureMAE)
 export(measureMCC)
@@ -883,7 +893,13 @@ export(measureMEDAE)
 export(measureMEDSE)
 export(measureMMCE)
 export(measureMSE)
+export(measureMultiLabelF1)
 export(measureMulticlassBrier)
+export(measureMultilabelACC)
+export(measureMultilabelHamloss)
+export(measureMultilabelPPV)
+export(measureMultilabelSubset01)
+export(measureMultilabelTPR)
 export(measureNPV)
 export(measurePPV)
 export(measureRMSE)
@@ -903,6 +919,12 @@ export(mmce)
 export(mse)
 export(multiclass.auc)
 export(multiclass.brier)
+export(multilabel.acc)
+export(multilabel.f1)
+export(multilabel.hamloss)
+export(multilabel.ppv)
+export(multilabel.subset01)
+export(multilabel.tpr)
 export(normalizeFeatures)
 export(npv)
 export(oversample)
