rename multilab measures (#1002)
* ...

* ...

* ...

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -787,7 +787,6 @@ export(getTaskType)
 export(getTuneResult)
 export(gmean)
 export(gpr)
-export(hamloss)
 export(hasLearnerProperties)
 export(hasProperties)
 export(holdout)
@@ -891,7 +890,6 @@ export(measureFP)
 export(measureFPR)
 export(measureGMEAN)
 export(measureGPR)
-export(measureHAMLOSS)
 export(measureLogloss)
 export(measureMAE)
 export(measureMCC)
@@ -899,7 +897,13 @@ export(measureMEDAE)
 export(measureMEDSE)
 export(measureMMCE)
 export(measureMSE)
+export(measureMultiLabelF1)
 export(measureMulticlassBrier)
+export(measureMultilabelACC)
+export(measureMultilabelHamloss)
+export(measureMultilabelPPV)
+export(measureMultilabelSubset01)
+export(measureMultilabelTPR)
 export(measureNPV)
 export(measurePPV)
 export(measurePRECMULT)
@@ -922,6 +926,12 @@ export(mmce)
 export(mse)
 export(multiclass.auc)
 export(multiclass.brier)
+export(multilabel.acc)
+export(multilabel.f1)
+export(multilabel.hamloss)
+export(multilabel.ppv)
+export(multilabel.subset01)
+export(multilabel.tpr)
 export(normalizeFeatures)
 export(npv)
 export(oversample)
