install gsl for travis

--- a/.travis.yml
+++ b/.travis.yml
@@ -14,6 +14,7 @@ addons:
       - g++-4.9
       - gfortran-4.9
       - libgmp-dev
+      - libgsl0-dev
 env:
   global:
     - _R_CHECK_TIMINGS_=0
