--- a/NAMESPACE
+++ b/NAMESPACE
@@ -701,7 +701,7 @@ export(bootstrapB632)
 export(bootstrapB632plus)
 export(bootstrapOOB)
 export(brier)
-export(brier.scaled)
+export(brierScaled)
 export(capLargeValues)
 export(cindex)
 export(configureMlr)
@@ -882,7 +882,7 @@ export(measureACC)
 export(measureAUC)
 export(measureBAC)
 export(measureBrier)
-export(measureBrier.scaled)
+export(measureBrierScaled)
 export(measureEXPVAR)
 export(measureFDR)
 export(measureFN)
