--- a/NAMESPACE
+++ b/NAMESPACE
@@ -701,7 +701,7 @@ export(bootstrapB632)
 export(bootstrapB632plus)
 export(bootstrapOOB)
 export(brier)
-export(brierScaled)
+export(brier.scaled)
 export(capLargeValues)
 export(cindex)
 export(configureMlr)
