improve brier scaled doc and tests (fixes #1006) (#1013)

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -704,7 +704,7 @@ export(bootstrapB632)
 export(bootstrapB632plus)
 export(bootstrapOOB)
 export(brier)
-export(brier.sc)
+export(brier.scaled)
 export(capLargeValues)
 export(cindex)
 export(configureMlr)
@@ -885,7 +885,7 @@ export(measureACC)
 export(measureAUC)
 export(measureBAC)
 export(measureBrier)
-export(measureBrier.sc)
+export(measureBrierScaled)
 export(measureEXPVAR)
 export(measureFDR)
 export(measureFN)
