Undo unnecessary changes

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -42,6 +42,9 @@ S3method(getLearnerProperties,MulticlassWrapper)
 S3method(getLearnerProperties,OverBaggingWrapper)
 S3method(getLearnerProperties,PreprocWrapperCaret)
 S3method(getLearnerProperties,WeightedClassesWrapper)
+S3method(getParamSet,BaseWrapper)
+S3method(getParamSet,Learner)
+S3method(getParamSet,character)
 S3method(getPredictionResponse,PredictionMultilabel)
 S3method(getPredictionResponse,default)
 S3method(getPredictionSE,default)
@@ -766,9 +769,6 @@ export(getMlrOptions)
 export(getMultilabelBinaryPerformances)
 export(getNestedTuneResultsOptPathDf)
 export(getNestedTuneResultsX)
-export(getParamSet.BaseWrapper)
-export(getParamSet.Learner)
-export(getParamSet.character)
 export(getPredictionProbabilities)
 export(getPredictionResponse)
 export(getPredictionSE)
