--- a/NAMESPACE
+++ b/NAMESPACE
@@ -770,6 +770,26 @@ export(getDefaultMeasure)
 export(getFailureModelMsg)
 export(getFeatSelResult)
 export(getFeatureImportance)
+export(getFeatureImportance.classif.RRF)
+export(getFeatureImportance.classif.boosting)
+export(getFeatureImportance.classif.cforest)
+export(getFeatureImportance.classif.gbm)
+export(getFeatureImportance.classif.randomForestSRC)
+export(getFeatureImportance.classif.ranger)
+export(getFeatureImportance.classif.rpart)
+export(getFeatureImportance.classif.xgboost)
+export(getFeatureImportance.regr.RRF)
+export(getFeatureImportance.regr.cforest)
+export(getFeatureImportance.regr.gbm)
+export(getFeatureImportance.regr.randomForestSRC)
+export(getFeatureImportance.regr.ranger)
+export(getFeatureImportance.regr.rpart)
+export(getFeatureImportance.regr.xgboost)
+export(getFeatureImportance.surv.cforest)
+export(getFeatureImportance.surv.randomForestSRC)
+export(getFeatureImportance.surv.ranger)
+export(getFeatureImportance.surv.rpart)
+export(getFeatureImportanceLearner)
 export(getFilterValues)
 export(getFilteredFeatures)
 export(getHomogeneousEnsembleModels)
