missing export on regression rf

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -781,6 +781,7 @@ export(getFeatureImportance.classif.xgboost)
 export(getFeatureImportance.regr.RRF)
 export(getFeatureImportance.regr.cforest)
 export(getFeatureImportance.regr.gbm)
+export(getFeatureImportance.regr.randomForest)
 export(getFeatureImportance.regr.randomForestSRC)
 export(getFeatureImportance.regr.ranger)
 export(getFeatureImportance.regr.rpart)
