getLearnerProperties works now with strings (Fixes #1027)

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -35,6 +35,7 @@ S3method(getLearnerModel,WrappedModel)
 S3method(getLearnerProperties,BaggingWrapper)
 S3method(getLearnerProperties,BaseWrapper)
 S3method(getLearnerProperties,CostSensClassifWrapper)
+S3method(getLearnerProperties,CostSensRegrWrapper)
 S3method(getLearnerProperties,CostSensWeightedPairsWrapper)
 S3method(getLearnerProperties,ImputeWrapper)
 S3method(getLearnerProperties,Learner)
@@ -42,6 +43,7 @@ S3method(getLearnerProperties,MulticlassWrapper)
 S3method(getLearnerProperties,OverBaggingWrapper)
 S3method(getLearnerProperties,PreprocWrapperCaret)
 S3method(getLearnerProperties,WeightedClassesWrapper)
+S3method(getLearnerProperties,character)
 S3method(getParamSet,BaseWrapper)
 S3method(getParamSet,Learner)
 S3method(getParamSet,character)
