new/updated stacking documentation

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -265,6 +265,7 @@ S3method(plotViperCharts,list)
 S3method(predict,WrappedModel)
 S3method(predictLearner,BaggingWrapper)
 S3method(predictLearner,BaseWrapper)
+S3method(predictLearner,BoostedStackingLearner)
 S3method(predictLearner,ConstantClassWrapper)
 S3method(predictLearner,CostSensClassifWrapper)
 S3method(predictLearner,CostSensRegrWrapper)
@@ -470,6 +471,7 @@ S3method(print,MultilabelTask)
 S3method(print,OptModel)
 S3method(print,PartialDependenceData)
 S3method(print,Prediction)
+S3method(print,RecombinedResampleResult)
 S3method(print,RepCVDesc)
 S3method(print,ResampleDesc)
 S3method(print,ResampleInstance)
@@ -504,6 +506,7 @@ S3method(summarizeColumns,data.frame)
 S3method(summarizeLevels,Task)
 S3method(summarizeLevels,data.frame)
 S3method(trainLearner,BaggingWrapper)
+S3method(trainLearner,BoostedStackingLearner)
 S3method(trainLearner,ConstantClassWrapper)
 S3method(trainLearner,CostSensClassifWrapper)
 S3method(trainLearner,CostSensRegrWrapper)
@@ -694,7 +697,9 @@ S3method(trainLearner,surv.rpart)
 export(G1)
 export(G2)
 export(acc)
+export(aggregatePredictions)
 export(analyzeFeatSelResult)
+export(applyEnsembleSelection)
 export(arsq)
 export(asROCRPrediction)
 export(auc)
@@ -723,8 +728,10 @@ export(db)
 export(downsample)
 export(dropFeatures)
 export(dunn)
+export(ensembleselectionBaseLearners)
 export(estimateRelativeOverfitting)
 export(estimateResidualVariance)
+export(expandPredList)
 export(expvar)
 export(f1)
 export(fdr)
@@ -773,12 +780,15 @@ export(getMlrOptions)
 export(getMultilabelBinaryPerformances)
 export(getNestedTuneResultsOptPathDf)
 export(getNestedTuneResultsX)
+export(getPreciseTaskType)
+export(getPredictionDataNonMulticoll)
 export(getPredictionProbabilities)
 export(getPredictionResponse)
 export(getPredictionSE)
 export(getPredictionTruth)
 export(getProbabilities)
 export(getRRPredictions)
+export(getResponse)
 export(getStackedBaseLearnerPredictions)
 export(getTaskClassLevels)
 export(getTaskCosts)
@@ -820,6 +830,7 @@ export(logloss)
 export(mae)
 export(makeAggregation)
 export(makeBaggingWrapper)
+export(makeBoostedStackingLearner)
 export(makeClassifTask)
 export(makeClusterTask)
 export(makeConstantClassWrapper)
@@ -882,6 +893,7 @@ export(makeTuneWrapper)
 export(makeUndersampleWrapper)
 export(makeWeightedClassesWrapper)
 export(makeWrappedModel)
+export(makeXBestLearnersFromMMTuneResult)
 export(mcc)
 export(mcp)
 export(meancosts)
@@ -967,6 +979,7 @@ export(removeConstantFeatures)
 export(removeHyperPars)
 export(repcv)
 export(resample)
+export(resampleStackedLearnerAgain)
 export(rmse)
 export(rsq)
 export(sae)
