fix merge conflict

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -933,7 +933,10 @@ export(mergeBenchmarkResultTask)
 export(mergeSmallFactorLevels)
 export(mmce)
 export(mse)
-export(multiclass.auc)
+export(multiclass.au1p)
+export(multiclass.au1u)
+export(multiclass.aunp)
+export(multiclass.aunu)
 export(multiclass.brier)
 export(multilabel.acc)
 export(multilabel.f1)
