--- a/NAMESPACE
+++ b/NAMESPACE
@@ -886,7 +886,11 @@ export(mcc)
 export(mcp)
 export(meancosts)
 export(measureACC)
+export(measureAU1P)
+export(measureAU1U)
 export(measureAUC)
+export(measureAUNP)
+export(measureAUNU)
 export(measureBAC)
 export(measureBrier)
 export(measureBrierScaled)
@@ -929,7 +933,10 @@ export(mergeBenchmarkResultTask)
 export(mergeSmallFactorLevels)
 export(mmce)
 export(mse)
-export(multiclass.auc)
+export(multiclass.au1p)
+export(multiclass.au1u)
+export(multiclass.aunp)
+export(multiclass.aunu)
 export(multiclass.brier)
 export(multilabel.acc)
 export(multilabel.f1)
