--- a/NAMESPACE
+++ b/NAMESPACE
@@ -973,6 +973,7 @@ export(predictLearner)
 export(reimpute)
 export(removeConstantFeatures)
 export(removeHyperPars)
+export(removeStackingModelsOnDisc)
 export(repcv)
 export(resample)
 export(resampleStackedLearnerAgain)
