add suggest packages

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -109,12 +109,14 @@ Suggests:
     pamr,
     party,
     penalized (>= 0.9-47),
+    plotly,
     pls,
     PMCMR (>= 4.1),
     pROC (>= 1.8),
     randomForest,
     randomForestSRC (>= 2.2.0),
     ranger (>= 0.5.0),
+    RColorBrewer,
     RCurl,
     rFerns,
     rjson,
