--- a/NAMESPACE
+++ b/NAMESPACE
@@ -176,6 +176,7 @@ S3method(makeRLearner,cluster.cmeans)
 S3method(makeRLearner,cluster.dbscan)
 S3method(makeRLearner,cluster.kkmeans)
 S3method(makeRLearner,cluster.kmeans)
+S3method(makeRLearner,multilabel.cforest)
 S3method(makeRLearner,multilabel.rFerns)
 S3method(makeRLearner,multilabel.randomForestSRC)
 S3method(makeRLearner,regr.GPfit)
@@ -373,6 +374,7 @@ S3method(predictLearner,cluster.cmeans)
 S3method(predictLearner,cluster.dbscan)
 S3method(predictLearner,cluster.kkmeans)
 S3method(predictLearner,cluster.kmeans)
+S3method(predictLearner,multilabel.cforest)
 S3method(predictLearner,multilabel.rFerns)
 S3method(predictLearner,multilabel.randomForestSRC)
 S3method(predictLearner,regr.GPfit)
@@ -619,6 +621,7 @@ S3method(trainLearner,cluster.cmeans)
 S3method(trainLearner,cluster.dbscan)
 S3method(trainLearner,cluster.kkmeans)
 S3method(trainLearner,cluster.kmeans)
+S3method(trainLearner,multilabel.cforest)
 S3method(trainLearner,multilabel.rFerns)
 S3method(trainLearner,multilabel.randomForestSRC)
 S3method(trainLearner,regr.GPfit)
