Forgot to import adist

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -1058,6 +1058,7 @@ importFrom(shiny,uiOutput)
 importFrom(survival,Surv)
 importFrom(survival,is.Surv)
 importFrom(utils,.S3methods)
+importFrom(utils,adist)
 importFrom(utils,browseURL)
 importFrom(utils,capture.output)
 importFrom(utils,combn)
