--- a/NAMESPACE
+++ b/NAMESPACE
@@ -957,6 +957,7 @@ export(plotFilterValues)
 export(plotFilterValuesGGVIS)
 export(plotHyperParsEffect)
 export(plotLearnerPrediction)
+export(plotLearnerPredictionPlotly)
 export(plotLearningCurve)
 export(plotLearningCurveGGVIS)
 export(plotPartialDependence)
@@ -1030,6 +1031,7 @@ import(data.table)
 import(ggplot2)
 import(methods)
 import(parallelMap)
+import(plotly)
 import(stats)
 import(stringi)
 importFrom(ggvis,bind_shiny)
