--- a/NAMESPACE
+++ b/NAMESPACE
@@ -1031,9 +1031,10 @@ import(data.table)
 import(ggplot2)
 import(methods)
 import(parallelMap)
-import(plotly)
 import(stats)
 import(stringi)
+importFrom(RColorBrewer,brewer.pal)
+importFrom(data.table,dcast)
 importFrom(ggvis,bind_shiny)
 importFrom(ggvis,ggvis)
 importFrom(ggvis,ggvisOutput)
@@ -1043,6 +1044,11 @@ importFrom(ggvis,layer_points)
 importFrom(ggvis,layer_ribbons)
 importFrom(ggvis,prop)
 importFrom(graphics,hist)
+importFrom(plotly,"%>%")
+importFrom(plotly,add_trace)
+importFrom(plotly,layout)
+importFrom(plotly,plot_ly)
+importFrom(plotly,toRGB)
 importFrom(plyr,ldply)
 importFrom(shiny,headerPanel)
 importFrom(shiny,mainPanel)
