fix methods and improve tests

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -113,6 +113,7 @@ S3method(makeRLearner,classif.cvglmnet)
 S3method(makeRLearner,classif.dbnDNN)
 S3method(makeRLearner,classif.dcSVM)
 S3method(makeRLearner,classif.extraTrees)
+S3method(makeRLearner,classif.featureless)
 S3method(makeRLearner,classif.fnn)
 S3method(makeRLearner,classif.gaterSVM)
 S3method(makeRLearner,classif.gausspr)
@@ -202,6 +203,7 @@ S3method(makeRLearner,regr.cubist)
 S3method(makeRLearner,regr.earth)
 S3method(makeRLearner,regr.elmNN)
 S3method(makeRLearner,regr.extraTrees)
+S3method(makeRLearner,regr.featureless)
 S3method(makeRLearner,regr.fnn)
 S3method(makeRLearner,regr.frbs)
 S3method(makeRLearner,regr.gausspr)
@@ -310,6 +312,7 @@ S3method(predictLearner,classif.cvglmnet)
 S3method(predictLearner,classif.dbnDNN)
 S3method(predictLearner,classif.dcSVM)
 S3method(predictLearner,classif.extraTrees)
+S3method(predictLearner,classif.featureless)
 S3method(predictLearner,classif.fnn)
 S3method(predictLearner,classif.gaterSVM)
 S3method(predictLearner,classif.gausspr)
@@ -398,6 +401,7 @@ S3method(predictLearner,regr.cubist)
 S3method(predictLearner,regr.earth)
 S3method(predictLearner,regr.elmNN)
 S3method(predictLearner,regr.extraTrees)
+S3method(predictLearner,regr.featureless)
 S3method(predictLearner,regr.fnn)
 S3method(predictLearner,regr.frbs)
 S3method(predictLearner,regr.gausspr)
@@ -556,6 +560,7 @@ S3method(trainLearner,classif.cvglmnet)
 S3method(trainLearner,classif.dbnDNN)
 S3method(trainLearner,classif.dcSVM)
 S3method(trainLearner,classif.extraTrees)
+S3method(trainLearner,classif.featureless)
 S3method(trainLearner,classif.fnn)
 S3method(trainLearner,classif.gaterSVM)
 S3method(trainLearner,classif.gausspr)
@@ -644,6 +649,7 @@ S3method(trainLearner,regr.cubist)
 S3method(trainLearner,regr.earth)
 S3method(trainLearner,regr.elmNN)
 S3method(trainLearner,regr.extraTrees)
+S3method(trainLearner,regr.featureless)
 S3method(trainLearner,regr.fnn)
 S3method(trainLearner,regr.frbs)
 S3method(trainLearner,regr.gausspr)
