--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -30,15 +30,15 @@ Encoding: UTF-8
 Roxygen: list(wrap = FALSE)
 Depends:
     R (>= 3.0.2),
-    BBmisc (>= 1.10),
-    ggplot2,
-    ParamHelpers (>= 1.8),
-    stats,
-    stringi
+    ParamHelpers (>= 1.8)
 Imports:
+    BBmisc (>= 1.10),
     checkmate (>= 1.8.1),
+    stringi,
+    stats,	  
     data.table,
     ggvis,
+    ggplot2,	
     methods,
     parallelMap (>= 1.3),
     plyr,
