--- a/NAMESPACE
+++ b/NAMESPACE
@@ -488,6 +488,7 @@ S3method(print,TuneMultiCritResult)
 S3method(print,TuneResult)
 S3method(print,UnsupervisedTask)
 S3method(print,WrappedModel)
+S3method(print,confMatrix)
 S3method(reimpute,Task)
 S3method(reimpute,data.frame)
 S3method(removeConstantFeatures,Task)
