new fun generateFeatureImportanceData
 - new generic feature importance method not for use as a filter
 - adds local importance computation
 - refactors permutation.importance filter to use this new code

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -461,6 +461,7 @@ S3method(print,CostSensTask)
 S3method(print,FailureModel)
 S3method(print,FeatSelControl)
 S3method(print,FeatSelResult)
+S3method(print,FeatureImportance)
 S3method(print,Filter)
 S3method(print,FilterValues)
 S3method(print,FunctionalANOVAData)
@@ -744,6 +745,7 @@ export(friedmanPostHocTestBMR)
 export(friedmanTestBMR)
 export(generateCalibrationData)
 export(generateCritDifferencesData)
+export(generateFeatureImportanceData)
 export(generateFilterValuesData)
 export(generateFunctionalANOVAData)
 export(generateHyperParsEffectData)
