--- a/NAMESPACE
+++ b/NAMESPACE
@@ -962,6 +962,7 @@ export(plotLearningCurve)
 export(plotLearningCurveGGVIS)
 export(plotPartialDependence)
 export(plotPartialDependenceGGVIS)
+export(plotPartialDependencePlotly)
 export(plotROCCurves)
 export(plotThreshVsPerf)
 export(plotThreshVsPerfGGVIS)
@@ -1049,6 +1050,7 @@ importFrom(plotly,add_trace)
 importFrom(plotly,layout)
 importFrom(plotly,plot_ly)
 importFrom(plotly,toRGB)
+importFrom(plyr,ddply)
 importFrom(plyr,ldply)
 importFrom(shiny,headerPanel)
 importFrom(shiny,mainPanel)
