adapted test for new output type

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -786,6 +786,7 @@ export(getFeatureImportance.regr.randomForestSRC)
 export(getFeatureImportance.regr.ranger)
 export(getFeatureImportance.regr.rpart)
 export(getFeatureImportance.regr.xgboost)
+export(getFeatureImportance.surv.cforest)
 export(getFeatureImportance.surv.randomForestSRC)
 export(getFeatureImportance.surv.ranger)
 export(getFeatureImportance.surv.rpart)
