--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -30,12 +30,12 @@ Encoding: UTF-8
 Roxygen: list(wrap = FALSE)
 Depends:
     R (>= 3.0.2),
+    ParamHelpers (>= 1.8),
+Imports:
     BBmisc (>= 1.10),
     ggplot2,
-    ParamHelpers (>= 1.8),
     stats,
-    stringi
-Imports:
+    stringi,
     checkmate (>= 1.8.1),
     data.table,
     ggvis,
