remove plyr dependency in favor of dplyr
 - only used rbind.fill and ldply: replaced with bind_rows
 - new util function to match factor levels for data.frames in a single
   level list (rbind.fill & ldply would silently cast them to characters)

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -38,10 +38,10 @@ Imports:
     stringi,
     checkmate (>= 1.8.1),
     data.table,
+    dplyr,
     ggvis,
     methods,
     parallelMap (>= 1.3),
-    plyr,
     reshape2,
     shiny,
     survival,
