--- a/NAMESPACE
+++ b/NAMESPACE
@@ -1038,6 +1038,7 @@ import(methods)
 import(parallelMap)
 import(stats)
 import(stringi)
+importFrom(dplyr,bind_rows)
 importFrom(ggvis,bind_shiny)
 importFrom(ggvis,ggvis)
 importFrom(ggvis,ggvisOutput)
@@ -1047,7 +1048,6 @@ importFrom(ggvis,layer_points)
 importFrom(ggvis,layer_ribbons)
 importFrom(ggvis,prop)
 importFrom(graphics,hist)
-importFrom(plyr,ldply)
 importFrom(shiny,headerPanel)
 importFrom(shiny,mainPanel)
 importFrom(shiny,pageWithSidebar)
