--- a/NAMESPACE
+++ b/NAMESPACE
@@ -457,6 +457,7 @@ S3method(print,BenchmarkResult)
 S3method(print,ChainModel)
 S3method(print,ClassifTask)
 S3method(print,ClusterTask)
+S3method(print,ConfMatrix)
 S3method(print,CostSensTask)
 S3method(print,FailureModel)
 S3method(print,FeatSelControl)
@@ -488,7 +489,6 @@ S3method(print,TuneMultiCritResult)
 S3method(print,TuneResult)
 S3method(print,UnsupervisedTask)
 S3method(print,WrappedModel)
-S3method(print,confMatrix)
 S3method(reimpute,Task)
 S3method(reimpute,data.frame)
 S3method(removeConstantFeatures,Task)
