re-enabled test for clustersim's db measure (fixes #1054)

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -58,7 +58,7 @@ Suggests:
     class,
     clue,
     cluster,
-    clusterSim,
+    clusterSim (>= 0.44-5),
     clValid,
     cmaes,
     CoxBoost,
