updated documentation of expression-related files

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -757,6 +757,8 @@ export(dropFeatures)
 export(dunn)
 export(estimateRelativeOverfitting)
 export(estimateResidualVariance)
+export(evaluateLearner)
+export(evaluateParset)
 export(expvar)
 export(f1)
 export(fdr)
