--- a/NAMESPACE
+++ b/NAMESPACE
@@ -25,6 +25,27 @@ S3method(getFailureModelMsg,BaseWrapperModel)
 S3method(getFailureModelMsg,FailureModel)
 S3method(getFailureModelMsg,HomogeneousEnsembleModel)
 S3method(getFailureModelMsg,WrappedModel)
+S3method(getFeatureImportanceLearner,classif.RRF)
+S3method(getFeatureImportanceLearner,classif.boosting)
+S3method(getFeatureImportanceLearner,classif.cforest)
+S3method(getFeatureImportanceLearner,classif.gbm)
+S3method(getFeatureImportanceLearner,classif.randomForest)
+S3method(getFeatureImportanceLearner,classif.randomForestSRC)
+S3method(getFeatureImportanceLearner,classif.ranger)
+S3method(getFeatureImportanceLearner,classif.rpart)
+S3method(getFeatureImportanceLearner,classif.xgboost)
+S3method(getFeatureImportanceLearner,regr.RRF)
+S3method(getFeatureImportanceLearner,regr.cforest)
+S3method(getFeatureImportanceLearner,regr.gbm)
+S3method(getFeatureImportanceLearner,regr.randomForest)
+S3method(getFeatureImportanceLearner,regr.randomForestSRC)
+S3method(getFeatureImportanceLearner,regr.ranger)
+S3method(getFeatureImportanceLearner,regr.rpart)
+S3method(getFeatureImportanceLearner,regr.xgboost)
+S3method(getFeatureImportanceLearner,surv.cforest)
+S3method(getFeatureImportanceLearner,surv.randomForestSRC)
+S3method(getFeatureImportanceLearner,surv.ranger)
+S3method(getFeatureImportanceLearner,surv.rpart)
 S3method(getHyperPars,BaseEnsemble)
 S3method(getHyperPars,BaseWrapper)
 S3method(getHyperPars,Learner)
@@ -770,26 +791,6 @@ export(getDefaultMeasure)
 export(getFailureModelMsg)
 export(getFeatSelResult)
 export(getFeatureImportance)
-export(getFeatureImportance.classif.RRF)
-export(getFeatureImportance.classif.boosting)
-export(getFeatureImportance.classif.cforest)
-export(getFeatureImportance.classif.gbm)
-export(getFeatureImportance.classif.randomForestSRC)
-export(getFeatureImportance.classif.ranger)
-export(getFeatureImportance.classif.rpart)
-export(getFeatureImportance.classif.xgboost)
-export(getFeatureImportance.regr.RRF)
-export(getFeatureImportance.regr.cforest)
-export(getFeatureImportance.regr.gbm)
-export(getFeatureImportance.regr.randomForest)
-export(getFeatureImportance.regr.randomForestSRC)
-export(getFeatureImportance.regr.ranger)
-export(getFeatureImportance.regr.rpart)
-export(getFeatureImportance.regr.xgboost)
-export(getFeatureImportance.surv.cforest)
-export(getFeatureImportance.surv.randomForestSRC)
-export(getFeatureImportance.surv.ranger)
-export(getFeatureImportance.surv.rpart)
 export(getFeatureImportanceLearner)
 export(getFilterValues)
 export(getFilteredFeatures)
