--- a/.travis.yml
+++ b/.travis.yml
@@ -56,7 +56,7 @@ after_success:
   - git config push.default matching
   - git commit man DESCRIPTION NAMESPACE -m "update auto-generated documentation [ci skip]" || true
   - git push
-  - \[ \$TRAVIS_PULL_REQUEST == "false" -a \$TRAVIS_BRANCH == "master" \] \&\& curl -s -X POST -H "Content-Type:application/json" -H "Accept:application/json" -H "Travis-API-Version:3" -H "Authorization:token $TT" -d "{\"request\":{\"branch\":\"gh-pages\", \"message\":\"commit $TRAVIS_COMMIT $TRAVIS_COMMIT_MSG\"}}" https://api.travis-ci.org/repo/mlr-org%2Fmlr-tutorial/requests
+  - "[ $TRAVIS_PULL_REQUEST == \"false\" -a $TRAVIS_BRANCH == \"master\" ] && curl -s -X POST -H \"Content-Type:application/json\" -H \"Accept:application/json\" -H \"Travis-API-Version:3\" -H \"Authorization:token $TT\" -d \"{\\\"request\\\":{\\\"branch\\\":\\\"gh-pages\\\", \\\"message\\\":\\\"commit $TRAVIS_COMMIT $TRAVIS_COMMIT_MSG\\\"}}\" https://api.travis-ci.org/repo/mlr-org%2Fmlr-tutorial/requests"
 
 after_failure:
   - ./travis-tool.sh dump_logs
