rename getConfMatrix to calculateConfusionMatrix and deprecate the first

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -715,6 +715,7 @@ export(bootstrapB632plus)
 export(bootstrapOOB)
 export(brier)
 export(brier.scaled)
+export(calculateConfusionMatrix)
 export(capLargeValues)
 export(cindex)
 export(configureMlr)
