regen doc before build to catch doc errors/warnings

--- a/.travis.yml
+++ b/.travis.yml
@@ -44,6 +44,7 @@ before_install:
 
 before_script:
   - java -cp $HOME/R/Library/RWekajars/java/weka.jar weka.core.WekaPackageManager -install-package thirdparty/XMeans1.0.4.zip
+  - R --no-save <<< 'library("devtools"); document()'
 
 after_success:
   - git checkout master
