better confusion matrix (#1071)
* ...

* stuff

* nice printer

* ...

* tests

* adapted other functions to work with the new output

* fixed stupid bug and correct output digits

* add missing ... in print

* add documentation for ... param in print

* documentation...

* changes

* add task.desc

* rename getConfMatrix to calculateConfusionMatrix and deprecate the first

* rename inner normalization function and different padding for one printer element

* Update calculateConfusionMatrix.R

* ...

* doc

* add family tag for object

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -457,6 +457,7 @@ S3method(print,BenchmarkResult)
 S3method(print,ChainModel)
 S3method(print,ClassifTask)
 S3method(print,ClusterTask)
+S3method(print,ConfMatrix)
 S3method(print,CostSensTask)
 S3method(print,FailureModel)
 S3method(print,FeatSelControl)
@@ -715,6 +716,7 @@ export(bootstrapB632plus)
 export(bootstrapOOB)
 export(brier)
 export(brier.scaled)
+export(calculateConfusionMatrix)
 export(capLargeValues)
 export(cindex)
 export(configureMlr)
