--- a/NAMESPACE
+++ b/NAMESPACE
@@ -476,6 +476,7 @@ S3method(print,MultilabelTask)
 S3method(print,OptModel)
 S3method(print,PartialDependenceData)
 S3method(print,Prediction)
+S3method(print,ROCMeasures)
 S3method(print,RepCVDesc)
 S3method(print,ResampleDesc)
 S3method(print,ResampleInstance)
@@ -716,6 +717,8 @@ export(bootstrapB632plus)
 export(bootstrapOOB)
 export(brier)
 export(brier.scaled)
+export(calculateConfusionMatrix)
+export(calculateROCMeasures)
 export(capLargeValues)
 export(cindex)
 export(configureMlr)
@@ -746,6 +749,7 @@ export(friedmanPostHocTestBMR)
 export(friedmanTestBMR)
 export(generateCalibrationData)
 export(generateCritDifferencesData)
+export(generateFeatureImportanceData)
 export(generateFilterValuesData)
 export(generateFunctionalANOVAData)
 export(generateHyperParsEffectData)
@@ -861,6 +865,7 @@ export(makeMultilabelStackingWrapper)
 export(makeMultilabelTask)
 export(makeOverBaggingWrapper)
 export(makeOversampleWrapper)
+export(makePrediction)
 export(makePreprocWrapper)
 export(makePreprocWrapperCaret)
 export(makeRLearner)
