move constant featureless predictions to seperate file

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,6 +6,8 @@ S3method(asROCRPrediction,Prediction)
 S3method(asROCRPrediction,ResamplePrediction)
 S3method(capLargeValues,Task)
 S3method(capLargeValues,data.frame)
+S3method(constantPrediction,ClassifTask)
+S3method(constantPrediction,RegrTask)
 S3method(createDummyFeatures,Task)
 S3method(createDummyFeatures,data.frame)
 S3method(downsample,ResampleInstance)
@@ -726,6 +728,7 @@ export(calculateConfusionMatrix)
 export(capLargeValues)
 export(cindex)
 export(configureMlr)
+export(constantPrediction)
 export(convertBMRToRankMatrix)
 export(convertMLBenchObjToTask)
 export(createDummyFeatures)
