Learner-dependent Feature Importance (#995)
* new function getFeatureImportance

* rename AUC to auc

* tests for run all

* add base test

* smaller issues

* add RRF importance

* add xgboost importance and fix rrf

* add importance for ranger surv

* ignore ordering in importance result test

* fix wrong test functions

* export getFeatureImportanceLearner

* missing export on regression rf

* smaller fixes

* minor changes

* add typecheck

* stuff

* refactoring

* changed output type and remove code bloat

* adapted test for new output type

* unneeded return

* test in learners all was broken

* Improve documentation.

* Code cleanup

* Style

* cleanup

* cleanup

* cleanup

* fix typo

* style

* fix test

* change output

* typo in docs

* surv ranger cannot impurity

* add measure element to ret obj & make contrast/measure NA by default

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -25,6 +25,27 @@ S3method(getFailureModelMsg,BaseWrapperModel)
 S3method(getFailureModelMsg,FailureModel)
 S3method(getFailureModelMsg,HomogeneousEnsembleModel)
 S3method(getFailureModelMsg,WrappedModel)
+S3method(getFeatureImportanceLearner,classif.RRF)
+S3method(getFeatureImportanceLearner,classif.boosting)
+S3method(getFeatureImportanceLearner,classif.cforest)
+S3method(getFeatureImportanceLearner,classif.gbm)
+S3method(getFeatureImportanceLearner,classif.randomForest)
+S3method(getFeatureImportanceLearner,classif.randomForestSRC)
+S3method(getFeatureImportanceLearner,classif.ranger)
+S3method(getFeatureImportanceLearner,classif.rpart)
+S3method(getFeatureImportanceLearner,classif.xgboost)
+S3method(getFeatureImportanceLearner,regr.RRF)
+S3method(getFeatureImportanceLearner,regr.cforest)
+S3method(getFeatureImportanceLearner,regr.gbm)
+S3method(getFeatureImportanceLearner,regr.randomForest)
+S3method(getFeatureImportanceLearner,regr.randomForestSRC)
+S3method(getFeatureImportanceLearner,regr.ranger)
+S3method(getFeatureImportanceLearner,regr.rpart)
+S3method(getFeatureImportanceLearner,regr.xgboost)
+S3method(getFeatureImportanceLearner,surv.cforest)
+S3method(getFeatureImportanceLearner,surv.randomForestSRC)
+S3method(getFeatureImportanceLearner,surv.ranger)
+S3method(getFeatureImportanceLearner,surv.rpart)
 S3method(getHyperPars,BaseEnsemble)
 S3method(getHyperPars,BaseWrapper)
 S3method(getHyperPars,Learner)
@@ -773,6 +794,8 @@ export(getConfMatrix)
 export(getDefaultMeasure)
 export(getFailureModelMsg)
 export(getFeatSelResult)
+export(getFeatureImportance)
+export(getFeatureImportanceLearner)
 export(getFilterValues)
 export(getFilteredFeatures)
 export(getHomogeneousEnsembleModels)
