--- a/NAMESPACE
+++ b/NAMESPACE
@@ -497,6 +497,7 @@ S3method(print,MultilabelTask)
 S3method(print,OptModel)
 S3method(print,PartialDependenceData)
 S3method(print,Prediction)
+S3method(print,ROCMeasures)
 S3method(print,RepCVDesc)
 S3method(print,ResampleDesc)
 S3method(print,ResampleInstance)
@@ -738,6 +739,7 @@ export(bootstrapOOB)
 export(brier)
 export(brier.scaled)
 export(calculateConfusionMatrix)
+export(calculateROCMeasures)
 export(capLargeValues)
 export(cindex)
 export(configureMlr)
