--- a/.travis.yml
+++ b/.travis.yml
@@ -56,7 +56,8 @@ after_success:
   - git config credential.helper "store --file=.git/credentials"
   - echo "https://$GT:@github.com" >> .git/credentials
   - git config push.default matching
-  - git commit man DESCRIPTION NAMESPACE man/mlrFamilies.Rd -m "update auto-generated documentation [ci skip]" || true
+  - git add man/*
+  - git commit man DESCRIPTION NAMESPACE -m "update auto-generated documentation [ci skip]" || true
   - git push
   - "[ $TRAVIS_PULL_REQUEST == \"false\" -a $TRAVIS_BRANCH == \"master\" ] && curl -s -X POST -H \"Content-Type:application/json\" -H \"Accept:application/json\" -H \"Travis-API-Version:3\" -H \"Authorization:token $TT\" -d \"{\\\"request\\\":{\\\"branch\\\":\\\"gh-pages\\\", \\\"message\\\":\\\"commit $TRAVIS_COMMIT $TRAVIS_COMMIT_MSG\\\"}}\" https://api.travis-ci.org/repo/mlr-org%2Fmlr-tutorial/requests"
 
