--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -44,6 +44,8 @@ Imports:
     ggvis,
     methods,
     parallelMap (>= 1.3),
+    plotly,
+    RColorBrewer,
     shiny,
     survival,
     utils
