--- a/NAMESPACE
+++ b/NAMESPACE
@@ -1089,6 +1089,8 @@ importFrom(ggvis,prop)
 importFrom(graphics,hist)
 importFrom(plotly,"%>%")
 importFrom(plotly,add_trace)
+importFrom(plotly,hide_colorbar)
+importFrom(plotly,hide_legend)
 importFrom(plotly,layout)
 importFrom(plotly,plot_ly)
 importFrom(plotly,toRGB)
