replace paste with stri_paste

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -1104,6 +1104,7 @@ importFrom(shiny,shinyServer)
 importFrom(shiny,shinyUI)
 importFrom(shiny,sidebarPanel)
 importFrom(shiny,uiOutput)
+importFrom(stringi,stri_paste)
 importFrom(survival,Surv)
 importFrom(survival,is.Surv)
 importFrom(utils,.S3methods)
