add symbol features

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -1076,7 +1076,6 @@ import(methods)
 import(parallelMap)
 import(stats)
 import(stringi)
-importFrom(RColorBrewer,brewer.pal)
 importFrom(data.table,dcast)
 importFrom(ggvis,bind_shiny)
 importFrom(ggvis,ggvis)
@@ -1086,6 +1085,7 @@ importFrom(ggvis,layer_paths)
 importFrom(ggvis,layer_points)
 importFrom(ggvis,layer_ribbons)
 importFrom(ggvis,prop)
+importFrom(grDevices,palette)
 importFrom(graphics,hist)
 importFrom(plotly,"%>%")
 importFrom(plotly,add_trace)
