fixes as requested in PR#1126

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -13,6 +13,7 @@ S3method(downsample,Task)
 S3method(estimateRelativeOverfitting,ResampleDesc)
 S3method(estimateResidualVariance,Learner)
 S3method(estimateResidualVariance,WrappedModel)
+S3method(evaluateParamExpressions,Learner)
 S3method(generateCalibrationData,BenchmarkResult)
 S3method(generateCalibrationData,Prediction)
 S3method(generateCalibrationData,ResampleResult)
@@ -758,8 +759,6 @@ export(dropFeatures)
 export(dunn)
 export(estimateRelativeOverfitting)
 export(estimateResidualVariance)
-export(evaluateLearner)
-export(evaluateParset)
 export(expvar)
 export(f1)
 export(fdr)
@@ -822,6 +821,7 @@ export(getTaskClassLevels)
 export(getTaskCosts)
 export(getTaskData)
 export(getTaskDescription)
+export(getTaskDictionary)
 export(getTaskFeatureNames)
 export(getTaskFormula)
 export(getTaskId)
