--- a/NAMESPACE
+++ b/NAMESPACE
@@ -877,6 +877,7 @@ export(makeFixedHoldoutInstance)
 export(makeImputeMethod)
 export(makeImputeWrapper)
 export(makeLearner)
+export(makeLearners)
 export(makeMeasure)
 export(makeModelMultiplexer)
 export(makeModelMultiplexerParamSet)
