new Learner operators

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -802,8 +802,14 @@ export(getFilterValues)
 export(getFilteredFeatures)
 export(getHomogeneousEnsembleModels)
 export(getHyperPars)
+export(getLearnerId)
 export(getLearnerModel)
+export(getLearnerPackages)
+export(getLearnerParVals)
+export(getLearnerParamSet)
+export(getLearnerPredictType)
 export(getLearnerProperties)
+export(getLearnerType)
 export(getMlrOptions)
 export(getMultilabelBinaryPerformances)
 export(getNestedTuneResultsOptPathDf)
