replace rbind.fill

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -10,7 +10,9 @@ S3method(createDummyFeatures,Task)
 S3method(createDummyFeatures,data.frame)
 S3method(downsample,ResampleInstance)
 S3method(downsample,Task)
+S3method(estimateRelativeOverfitting,Prediction)
 S3method(estimateRelativeOverfitting,ResampleDesc)
+S3method(estimateRelativeOverfitting,ResamplePrediction)
 S3method(estimateResidualVariance,Learner)
 S3method(estimateResidualVariance,WrappedModel)
 S3method(generateCalibrationData,BenchmarkResult)
@@ -755,7 +757,6 @@ export(db)
 export(downsample)
 export(dropFeatures)
 export(dunn)
-export(estimateRelativeOverfitting)
 export(estimateResidualVariance)
 export(expvar)
 export(f1)
