--- a/NAMESPACE
+++ b/NAMESPACE
@@ -757,6 +757,7 @@ export(db)
 export(downsample)
 export(dropFeatures)
 export(dunn)
+export(estimateRelativeOverfitting)
 export(estimateResidualVariance)
 export(expvar)
 export(f1)
