--- a/.travis.yml
+++ b/.travis.yml
@@ -31,6 +31,7 @@ r_github_packages:
   - berndbischl/parallelMap
   - berndbischl/ParamHelpers
   - RevolutionAnalytics/quickcheck/pkg
+  - mllg/checkmate
 
 before_install:
   - mkdir $HOME/bin
