--- a/NAMESPACE
+++ b/NAMESPACE
@@ -43,6 +43,7 @@ S3method(getFeatureImportanceLearner,regr.ranger)
 S3method(getFeatureImportanceLearner,regr.rpart)
 S3method(getFeatureImportanceLearner,regr.xgboost)
 S3method(getFeatureImportanceLearner,surv.cforest)
+S3method(getFeatureImportanceLearner,surv.gbm)
 S3method(getFeatureImportanceLearner,surv.randomForestSRC)
 S3method(getFeatureImportanceLearner,surv.ranger)
 S3method(getFeatureImportanceLearner,surv.rpart)
@@ -266,6 +267,7 @@ S3method(makeRLearner,surv.cforest)
 S3method(makeRLearner,surv.coxph)
 S3method(makeRLearner,surv.cv.CoxBoost)
 S3method(makeRLearner,surv.cvglmnet)
+S3method(makeRLearner,surv.gbm)
 S3method(makeRLearner,surv.glmboost)
 S3method(makeRLearner,surv.glmnet)
 S3method(makeRLearner,surv.penalized.fusedlasso)
@@ -463,6 +465,7 @@ S3method(predictLearner,surv.cforest)
 S3method(predictLearner,surv.coxph)
 S3method(predictLearner,surv.cv.CoxBoost)
 S3method(predictLearner,surv.cvglmnet)
+S3method(predictLearner,surv.gbm)
 S3method(predictLearner,surv.glmboost)
 S3method(predictLearner,surv.glmnet)
 S3method(predictLearner,surv.penalized.fusedlasso)
@@ -713,6 +716,7 @@ S3method(trainLearner,surv.cforest)
 S3method(trainLearner,surv.coxph)
 S3method(trainLearner,surv.cv.CoxBoost)
 S3method(trainLearner,surv.cvglmnet)
+S3method(trainLearner,surv.gbm)
 S3method(trainLearner,surv.glmboost)
 S3method(trainLearner,surv.glmnet)
 S3method(trainLearner,surv.penalized.fusedlasso)
