--- a/NAMESPACE
+++ b/NAMESPACE
@@ -222,6 +222,7 @@ S3method(makeRLearner,regr.cforest)
 S3method(makeRLearner,regr.crs)
 S3method(makeRLearner,regr.ctree)
 S3method(makeRLearner,regr.cubist)
+S3method(makeRLearner,regr.cvglmnet)
 S3method(makeRLearner,regr.earth)
 S3method(makeRLearner,regr.elmNN)
 S3method(makeRLearner,regr.extraTrees)
@@ -420,6 +421,7 @@ S3method(predictLearner,regr.cforest)
 S3method(predictLearner,regr.crs)
 S3method(predictLearner,regr.ctree)
 S3method(predictLearner,regr.cubist)
+S3method(predictLearner,regr.cvglmnet)
 S3method(predictLearner,regr.earth)
 S3method(predictLearner,regr.elmNN)
 S3method(predictLearner,regr.extraTrees)
@@ -671,6 +673,7 @@ S3method(trainLearner,regr.cforest)
 S3method(trainLearner,regr.crs)
 S3method(trainLearner,regr.ctree)
 S3method(trainLearner,regr.cubist)
+S3method(trainLearner,regr.cvglmnet)
 S3method(trainLearner,regr.earth)
 S3method(trainLearner,regr.elmNN)
 S3method(trainLearner,regr.extraTrees)
