--- a/NAMESPACE
+++ b/NAMESPACE
@@ -922,9 +922,12 @@ export(makeStackedLearner)
 export(makeSurvTask)
 export(makeTuneControlCMAES)
 export(makeTuneControlDesign)
+export(makeTuneControlEDA)
+export(makeTuneControlGA)
 export(makeTuneControlGenSA)
 export(makeTuneControlGrid)
 export(makeTuneControlIrace)
+export(makeTuneControlPSO)
 export(makeTuneControlRandom)
 export(makeTuneMultiCritControlGrid)
 export(makeTuneMultiCritControlNSGA2)
