printer for listLearners

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -288,7 +288,6 @@ S3method(plotViperCharts,BenchmarkResult)
 S3method(plotViperCharts,Prediction)
 S3method(plotViperCharts,ResampleResult)
 S3method(plotViperCharts,list)
-S3method(predict,WrappedModel)
 S3method(predictLearner,BaggingWrapper)
 S3method(predictLearner,BaseWrapper)
 S3method(predictLearner,ConstantClassWrapper)
@@ -497,6 +496,7 @@ S3method(print,HyperParsEffectData)
 S3method(print,ImputationDesc)
 S3method(print,Learner)
 S3method(print,LearningCurveData)
+S3method(print,ListLearners)
 S3method(print,Measure)
 S3method(print,MultilabelTask)
 S3method(print,OptModel)
@@ -517,7 +517,6 @@ S3method(print,TuneMultiCritResult)
 S3method(print,TuneResult)
 S3method(print,UnsupervisedTask)
 S3method(print,WrappedModel)
-S3method(print,listLearners)
 S3method(reimpute,Task)
 S3method(reimpute,data.frame)
 S3method(removeConstantFeatures,Task)
@@ -1027,6 +1026,7 @@ export(plotTuneMultiCritResult)
 export(plotTuneMultiCritResultGGVIS)
 export(plotViperCharts)
 export(ppv)
+export(predict.WrappedModel)
 export(predictLearner)
 export(qsr)
 export(rae)
