Added Bruno Vieira as ctb.

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -25,7 +25,8 @@ Authors@R: c(
     person("Florian", "Fendt", email = "flo_fendt@gmx.de", role = "ctb"),
     person("Philipp", "Probst", email = "philipp_probst@gmx.de", role = "ctb"),
     person("Xudong", "Sun", email = "xudong.sun@stat.uni-muenchen.de", role = "ctb"),
-    person("Janek", "Thomas", email = "janek.thomas@stat.uni-muenchen.de", role = "ctb"))
+    person("Janek", "Thomas", email = "janek.thomas@stat.uni-muenchen.de", role = "ctb"),
+	person("Bruno", "Vieira", email = "bruno.hebling.vieira@usp.br", role = "ctb"))
 URL: https://github.com/mlr-org/mlr
 BugReports: https://github.com/mlr-org/mlr/issues
 License: BSD_2_clause + file LICENSE
