--- a/NAMESPACE
+++ b/NAMESPACE
@@ -812,6 +812,7 @@ export(makeCostSensTask)
 export(makeCostSensWeightedPairsWrapper)
 export(makeCustomResampledMeasure)
 export(makeDownsampleWrapper)
+export(makeDummyFeaturesWrapper)
 export(makeFeatSelControlExhaustive)
 export(makeFeatSelControlGA)
 export(makeFeatSelControlRandom)
